[gd_scene load_steps=2 format=3 uid="uid://86qvikra3il8"]

[ext_resource type="Script" path="res://pose_slider.gd" id="1_57plt"]

[node name="Pose_slider" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2
script = ExtResource("1_57plt")

[node name="Label_Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Label_Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value_Edit" type="LineEdit" parent="Label_Container"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
alignment = 1

[node name="Slider" type="HSlider" parent="."]
layout_mode = 2
value = 50.0

[connection signal="text_submitted" from="Label_Container/Value_Edit" to="." method="value_edit_text_submitted"]
[connection signal="drag_ended" from="Slider" to="." method="slider_drag_ended"]
[connection signal="value_changed" from="Slider" to="." method="slider_value_changed"]
